# vm-working

./: .bzrignore  CMakeLists.txt
src/: CMakeLists.txt  Decoder.cxx  Decoder.hxx  DecoderStateWidget.cxx  DecoderStateWidget.hxx  DecoderStateWidget.ui  DecoderWidget.cxx  DecoderWidget.hxx  DecoderWidget.ui  InstructionsProvider.cxx  InstructionsProvider.hxx  Machine.cxx  Machine.hxx  MachineControlWidget.cxx  MachineControlWidget.hxx  MachineControlWidget.ui  MachineWidget.cxx  MachineWidget.hxx  MachineWidget.ui  Memory.cxx  Memory.hxx  MemoryControlWidget.cxx  MemoryControlWidget.hxx  MemoryControlWidget.ui  MemoryStateWidget.cxx  MemoryStateWidget.hxx  MemoryStateWidget.ui  Processor.cxx  Processor.hxx  ProcessorStateWidget.cxx  ProcessorStateWidget.hxx  ProcessorStateWidget.ui  Register.cxx  Register.hxx  main.cxx
